<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:background="@drawable/picturemain"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/meetingDetails_str"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="300dp"
        android:alpha="0.8"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_name"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/name_str"
            android:textColor="#fff"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/details_phone"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_str"
            android:textColor="#fff"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/details_email"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/email_str"
            android:textColor="#fff"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/details_technician"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/technicianname_str"
            android:textColor="#fff"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/details_date"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/date_str"
            android:textColor="#fff"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/details_time"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/time_str"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/send_email"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/inboxfinal"
            android:scaleType="fitXY" />


        <ImageButton
            android:id="@+id/add_calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/calendar"
            android:scaleType="fitXY" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/finish_btn"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/buttongray"
            android:text="@string/finish_str"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>