<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/meeting_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/picturemain"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/choose_str"
        android:textColor="#fff"
        android:focusable="false"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_date"
            android:layout_width="70dp"
            android:layout_marginLeft="10dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/in_date"
            android:layout_margin="3dp"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:background="@drawable/button"
            android:text="@string/date_str"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/in_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:gravity="center"
            android:inputType="datetime" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_time"
            android:layout_width="70dp"
            android:layout_marginLeft="10dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/in_date"
            android:layout_margin="3dp"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:background="@drawable/button"
            android:text="@string/time_str"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/in_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/chooseTech_str"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/in_technician"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttongray"
        android:text="@string/continue_str"
        android:textColor="#fff" />


</LinearLayout>