<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/picturemain"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:alpha="0.8"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_str"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/in_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:inputType="text"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_str"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/in_phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:inputType="number"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_str"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/in_emaul"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_str"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/in_problem"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttongray"
            android:text="@string/continue_str"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </LinearLayout>

</LinearLayout>